--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+*.weights
 yolov4-p6.weights
 # dependencies
 /node_modules
