--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rtsp-demo-v2",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://0.0.0.0:3001",
+  "proxy": "http://ec2-3-23-63-226.us-east-2.compute.amazonaws.com:3001",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.11.4",
